# joia-sample-nemeda-integration

./: Procfile  README.md  app.json  main.py  payload.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
