[tool.poetry]
name = "fastapi-joia-sdk"
version = "0.1.0"
description = ""
authors = ["Isaac Mayolas <imayolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sse-starlette = "^2.0.0"
fastapi-poe = "^0.0.37"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
